<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vta">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".course">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="50dp"
        android:text="Available Courses"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="expandict5"
        app:cardCornerRadius="28dp"
        app:cardElevation="18dp"
        app:contentPadding="10dp"
        android:backgroundTint="@color/white"
        >

        <LinearLayout
            android:id="@+id/ict5_layout"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Information Technology Level 5"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ict5_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/ict_content"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="expandict4"
        app:cardCornerRadius="28dp"
        app:cardElevation="18dp"
        android:backgroundTint="@color/white"
        app:contentPadding="10dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/ict4_layout"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Information Technology Level 4"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ict4_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/ict4_content"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:onClick="expandict4h"
    app:cardCornerRadius="28dp"
    app:cardElevation="18dp"
    app:contentPadding="10dp"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:id="@+id/ict4h_layout"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Computer Hardware"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ict4h_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/ictst_content"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:visibility="gone" />

    </LinearLayout>
</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="expandictst"
        app:cardCornerRadius="28dp"
        app:cardElevation="18dp"
        app:contentPadding="10dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:id="@+id/ictst_layout"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Software Developer"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ictst_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/ictst_content"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:visibility="gone"
                tools:ignore="DuplicateIds" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/white"
        android:onClick="expanddp"
        app:cardCornerRadius="28dp"
        app:cardElevation="18dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:id="@+id/dp_layout"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Draughtsperson"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/dp_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/dp_content"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="expandet"
        app:cardCornerRadius="28dp"
        app:cardElevation="18dp"
        app:contentPadding="10dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:id="@+id/et_layout"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Electronic Technician Level 4 "
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/et_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/et_content"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="expandem"
        app:cardCornerRadius="28dp"
        app:cardElevation="18dp"
        app:contentPadding="10dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:id="@+id/em_layout"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Electric Motor Winder Level 4"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/em_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/em_content"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="expandaf"
        app:cardCornerRadius="28dp"
        app:cardElevation="18dp"
        app:contentPadding="10dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:id="@+id/af_layout"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Aluminium Fabricator"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/af_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/af_content"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="expandbk"
        app:cardCornerRadius="28dp"
        app:cardElevation="18dp"
        app:contentPadding="10dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:id="@+id/bk_layout"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Baker"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bk_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/bk_content"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="expandck"
        app:cardCornerRadius="28dp"
        app:cardElevation="18dp"
        app:contentPadding="10dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:id="@+id/ck_layout"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Baker"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ck_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/bk_content"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>




</LinearLayout>

</ScrollView>